- change folder structure - change database to ArangoDB Signed-off-by: rezamuaz <rezamuaz13@gmail.com>

--- a/.env
+++ b/.env
@@ -1,26 +1,33 @@
 # main config
-SERVER_ADDRESS=:8080
-GIN_MODE=release
+EXTERNAL_PORT=9000
+APP_MODE=debug
 CONTEXT_TIMEOUT=30
-ACCESS_TOKEN_EXPIRY_HOUR = 2
-REFRESH_TOKEN_EXPIRY_HOUR = 168
-ACCESS_TOKEN_SECRET=access_token_secret
-REFRESH_TOKEN_SECRET=refresh_token_secret
 
 
-# mongodb config
-MONGO_INITDB_ROOT_USERNAME=aschenberg
-MONGO_INITDB_ROOT_PASSWORD=qn8prVZ6Cr75
-MONGO_INITDB_DATABASE=manga
-DB_HOST=localhost
-DB_PORT=27017
-MONGO_ATLAS=false
+
+# JWT
+JWT_ACCESS_TOKEN_EXPIRY_HOUR = 2
+JWT_REFRESH_TOKEN_EXPIRY_HOUR = 168
+JWT_ACCESS_TOKEN_SECRET=access_token_secret
+JWT_REFRESH_TOKEN_SECRET=refresh_token_secret
+
+# arangodb config
+ARANGO_HOST=localhost
+ARANGO_USERNAME=aschenberg
+ARANGO_ROOT_PASSWORD=qn8prVZ6Cr75
+ARANGO_PASSWORD=qn8prVZ6Cr75
+ARANGO_PORT=8529
+ARANGO_DBNAME=mangachan
+
+# LOGGER CONFIG
+LOG_LEVEL=DEBUG
+LOGGER=zap
 
 # OIDC config
-CLIENT_ID=663010130625-gisdnh6i8mh1a6ldd2h0aea9bqiqcur2.apps.googleusercontent.com
-CLIENT_SECRET=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 
-REDIRECT_URL=https://manga-e061a.firebaseapp.com/__/auth/handler 
-ISSUER_URL=https://accounts.google.com
+OIDC_CLIENT_ID=663010130625-gisdnh6i8mh1a6ldd2h0aea9bqiqcur2.apps.googleusercontent.com
+OIDC_CLIENT_SECRET=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 
+OIDC_REDIRECT_URL=https://manga-e061a.firebaseapp.com/__/auth/handler 
+OIDC_ISSUER_URL=https://accounts.google.com
 
 #redis/keydb
 REDIS_HOST=localhost
