- change main database to postgres Signed-off-by: rezamuaz <rezamuaz13@gmail.com>

--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
-# main config
+# MAIN SERVER CONFIG
 EXTERNAL_PORT=9000
 APP_MODE=debug
 CONTEXT_TIMEOUT=30
 
 
 
-# JWT
+# JWT CONFIG
 JWT_ACCESS_TOKEN_EXPIRY_HOUR = 2
 JWT_REFRESH_TOKEN_EXPIRY_HOUR = 168
 JWT_ACCESS_TOKEN_SECRET=access_token_secret
 JWT_REFRESH_TOKEN_SECRET=refresh_token_secret
 
-# arangodb config
+# ARANGODB CONFIG
 ARANGO_HOST=localhost
 ARANGO_USERNAME=aschenberg
 ARANGO_ROOT_PASSWORD=qn8prVZ6Cr75
@@ -19,17 +19,27 @@ ARANGO_PASSWORD=qn8prVZ6Cr75
 ARANGO_PORT=8529
 ARANGO_DBNAME=mangachan
 
+
+# POSTGRESQL CONFIG
+PG_USERNAME=destiny
+PG_PASSWORD=qn8prVZ6Cr75
+PG_POOLMAX=10
+PG_PORT=5555
+PG_HOST=localhost
+PG_NAME=mangachan
+PG_MIGRATION_URL=
+
 # LOGGER CONFIG
 LOG_LEVEL=DEBUG
 LOGGER=zap
 
-# OIDC config
+# OIDC CONFIG
 OIDC_CLIENT_ID=663010130625-gisdnh6i8mh1a6ldd2h0aea9bqiqcur2.apps.googleusercontent.com
 OIDC_CLIENT_SECRET=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 
 OIDC_REDIRECT_URL=https://manga-e061a.firebaseapp.com/__/auth/handler 
 OIDC_ISSUER_URL=https://accounts.google.com
 
-#redis/keydb
+#rREDIS/KEYDB CONFIG
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=12345678
