--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,13 +12,36 @@ services:
       - ./keydb.conf:/etc/keydb/keydb.conf
     ports:
       - 6379:6379
+    networks:
+      - mangachan_net
     restart: unless-stopped
+
+  postgre:
+    image: postgres:15.3-alpine
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: ${PG_PASSWORD}
+      POSTGRES_USER: ${PG_USERNAME}
+      POSTGRES_DB: ${PG_NAME}
+      TZ: Asia/Jakarta
+    container_name: postgre
+    volumes:
+      - pgdata:/var/lib/postgresql/data      
+    ports:
+      - "5555:5432"
+    networks:
+      -  mangachan_net
+    # healthcheck:
+    #   test: ["CMD-SHELL", "pg_isready -U $${PG_USERNAME} -d $${PG_NAME} || exit 1"]
+    #   interval: 5s
+    tty: true
 
   arangodb_db:
     image: arangodb:latest
     container_name: arango
     environment:
       ARANGO_ROOT_PASSWORD: ${ARANGO_ROOT_PASSWORD}
+      ARANGO_STORAGE_ENGINE: rocksdb
     ports:
       - 8529:8529
     networks:
@@ -26,7 +49,7 @@ services:
     volumes:
       - arangodb_data_container:/var/lib/arangodb3
       - arangodb_apps_data_container:/var/lib/arangodb3-apps
-
+   
 
 networks:
   mangachan_net:
@@ -36,3 +59,4 @@ volumes:
   arangodb_data_container:
   arangodb_apps_data_container:
   keydb-data:
+  pgdata:
