--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -18,7 +18,7 @@ sql:
     # queries refers to where our manually created queries located
     # queries: "query.sql" # will refer a file
     # or
-    queries: "/internal/infra/postgresql/queries" # will refer a directory
+    queries: "/internal/infra/pgsql/queries" # will refer a directory
     # schema refers to where our schema definitions located
     # schema: "schema.sql" # will refer a file
     # or
@@ -29,14 +29,14 @@ sql:
         output_models_file_name: entities.go
         
         sql_package: "pgx/v5"
-        out: "/internal/infra/postgresql/pgdb"
+        out: "/internal/infra/pgsql/pgdb"
         emit_empty_slices: true
         emit_pointers_for_null_types: false
   
 
     # docker run --rm -v "${PWD}:/src" -w /src sqlc/sqlc generate
   
-    # migrate -path migrations/sql -database "postgresql://destiny:12345678@localhost:3333/guru_db?sslmode=disable" -verbose up
+    # migrate -path migrations/sql -database "postgresql://destiny:qn8prVZ6Cr75@localhost:5555/mangachan?sslmode=disable" -verbose up
     # migrate -path migrations/sql -database "postgresql://linpostgres:Iu8q@GktqHUqC184@lin-26815-10323-pgsql-primary.servers.linodedb.net:5432/postgres?sslmode=require" -verbose up
 
     # migrate create -ext sql -dir migrations/sql -seq schema
