- add create manga Signed-off-by: aschenberg <alpha.schanberg@gmail.com>

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # MAIN SERVER CONFIG
-EXTERNAL_PORT=9000
+EXTERNAL_PORT=7777
 APP_MODE=debug
 CONTEXT_TIMEOUT=30
 
@@ -28,6 +28,15 @@ PG_PORT=5555
 PG_HOST=localhost
 PG_NAME=mangachan
 PG_MIGRATION_URL=
+
+# MINIO CONFIG
+MINIO_ENDPOINT=localhost:9000
+MINIO_ACCESS_KEY=i3mk0TPcGg8AURfm2HRN
+MINIO_SECRET_KEY=RoCG6bHY3M8AtCWoG5pRjPRVesl5lCoI83PTd7LG
+MINIO_BUCKET1=manga
+MINIO_BUCKET1=chapter
+MINIO_REGION=us-east-1
+MINIO_SSL=false
 
 # LOGGER CONFIG
 LOG_LEVEL=DEBUG
