--- a/.env
+++ b/.env
@@ -30,13 +30,13 @@ PG_NAME=mangachan
 PG_MIGRATION_URL=
 
 # MINIO CONFIG
-MINIO_ENDPOINT=localhost:9000
-MINIO_ACCESS_KEY=i3mk0TPcGg8AURfm2HRN
-MINIO_SECRET_KEY=RoCG6bHY3M8AtCWoG5pRjPRVesl5lCoI83PTd7LG
+MINIO_ENDPOINT=f8g5.fra5.idrivee2-10.com
+MINIO_ACCESS_KEY=igpEYA9im5reM9oBBFDG
+MINIO_SECRET_KEY=mL4RCNekW5RcFNxbIJsa3KD99OGBYhFvl0qwK02Z
 MINIO_BUCKET1=manga
-MINIO_BUCKET1=chapter
-MINIO_REGION=us-east-1
-MINIO_SSL=false
+MINIO_BUCKET2=chapter
+MINIO_REGION=Frankfurt-2
+MINIO_SSL=true
 
 # LOGGER CONFIG
 LOG_LEVEL=DEBUG
@@ -48,8 +48,29 @@ OIDC_CLIENT_SECRET=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
 OIDC_REDIRECT_URL=https://manga-e061a.firebaseapp.com/__/auth/handler 
 OIDC_ISSUER_URL=https://accounts.google.com
 
-#rREDIS/KEYDB CONFIG
+# REDIS/KEYDB CONFIG
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=12345678
 REDIS_TIMEOUT=2
+
+# RABBITMQ CONFIG
+RABBITMQ_USER=mydestiny
+RABBITMQ_PASSWORD=ntuser
+RABBITMQ_HOST=localhost
+RABBITMQ_PORT=5672
+
+# IMAGOR CONFIG
+IMAGOR_HOST=http://localhost
+IMAGOR_PORT=8000
+
+# MANGA SOURCE
+MANGA_MY_ANIME_LIST=https://api.jikan.moe/v4
+MANGA_MANGA_UPDATE=https://api.mangaupdates.com
+
+# MEILISEARCH CONFIG
+MEILI_HOST=http://localhost
+MEILI_PORT=7700
+MEILI_API_KEY=wOk5BzIhew1eaSJf
+
+
